# ark

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: CI.yml
ark/: Cargo.toml
ark-contracts/: Cargo.toml
ark-contracts/src/: event_handlers.rs  lib.rs  states.rs  wallets.rs
ark-db/: Cargo.toml  diesel.toml
ark-db/migrations/2023-10-29-104345_create-coinflip-chain-currencies/: up.sql
ark-db/migrations/2023-10-29-104345_create_coinflip_chain_currencies/: up.sql
ark-db/migrations/2023-12-23-062907_create-game-activities/: up.sql
ark-db/migrations/2023-12-23-104345_rename-coinflip-to-ark-chain-currencies/: up.sql
ark-db/migrations/2024-03-18-104445_create-total-paid-out-reports/: up.sql
ark-db/src/: db.rs  lib.rs  schema.rs
ark-repo/: Cargo.toml
ark-repo/src/: lib.rs  repo.rs
ark-web/: Cargo.toml
ark-web-app/: Cargo.toml
ark-web-app/src/: lib.rs
ark-web-common/: Cargo.toml
ark-web-common/src/: lib.rs
ark-web/src/: app_router.rs  app_server_config.rs  app_workers.rs  handlers.rs  lib.rs  main.rs  server_responses.rs
ark-web/src/app_workers/: cache_chain_unit_currencies_in_usd.rs
ark-web/src/handlers/: keep_indexing_active_request_handler.rs  wallet_handler.rs
ark-web3/: Cargo.toml
ark-web3/src/: chain_explorers.rs  chains.rs  json_rpcs.rs  lib.rs  wallets.rs
ark/src/: environments.rs  lib.rs  total_paid_out_report.rs  wallets.rs
chaindexing/src/: contract_states.rs  event_handlers.rs  events_ingester.rs  lib.rs  nodes.rs
chaindexing/src/contract_states/: migrations.rs
chaindexing/src/events_ingester/: ingest_events.rs  maybe_handle_chain_reorg.rs
chaindexing/src/repos/: repo.rs
chaindexing/src/repos/postgres_repo/: raw_queries.rs
coinflip/: Cargo.toml
coinflip-contracts/: Cargo.toml
coinflip-contracts/src/: coinflip.rs  contract.rs
coinflip-contracts/src/coinflip/: event_handlers.rs  states.rs
coinflip-contracts/src/coinflip/event_handlers/: expired_game_refunded.rs  game_completed.rs  game_created.rs  game_expiry_adjusted.rs  game_play_chance_revealed.rs  game_play_created.rs
coinflip-contracts/src/contract/: event_handlers.rs  states.rs
coinflip-contracts/src/contract/event_handlers/: expired_game_refunded.rs  game_completed.rs  game_created.rs  game_play_chance_revealed.rs  game_play_created.rs  game_play_proof_created.rs  new_game_outcome.rs
coinflip-repo/: Cargo.toml
coinflip-repo/src/: repo.rs
coinflip-web/: Cargo.toml
coinflip-web/src/: app_router.rs  app_workers.rs  handlers.rs  lib.rs
coinflip-web/src/app_workers/: cache_chain_unit_currencies_in_usd.rs  caching.rs  index_contracts.rs  index_evm_states.rs  refund_expired_game_players.rs  reveal_game_play_chances.rs  upload_game_play_proofs.rs
coinflip-web/src/handlers/: game_activity_handler.rs  game_handler.rs  game_play_handler.rs
coinflip/src/: chains.rs  coin.rs  contract.rs  games.rs  lib.rs
coinflip/src/contract/: event_handlers.rs  migrations.rs  states.rs
coinflip/src/contract/event_handlers/: game_created.rs  game_play_created.rs  game_play_proof_created.rs
libs/ark-utils/: Cargo.toml
libs/ark-utils/src/: ethers.rs  floats.rs  lib.rs  strings.rs
libs/crypto-compare/: Cargo.toml
libs/crypto-compare/src/: lib.rs
