[package]
name = "ark-db"
version = "0.0.1"
edition = "2021"
description = "DB ORM related logic used for ark systems"

[dependencies]
dotenvy = "0.15"
bb8 = "0.8"
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
serde = { version = "1", features = ["derive"] }