[package]
name = "ark-web-common"
version = "0.1.0"
edition = "2021"
description = "Common structs/functions for web apps in ark e.g. `ark-web` and `coinflip-web`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-db = { path = "../ark-db" }
axum = "0.7"
chaindexing = { git = "https://github.com/chaindexing/chaindexing-rs", branch="allow-optimizing-rpc-calls" }
http = "1"
dotenvy = "0.15"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
