[package]
name = "ark-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-db = { path = "../ark-db" }
ark-web-app = { path = "../ark-web-app" }
axum = "0.6"
coinflip-web = { path = "../coinflip-web" }
http = "0.2"
dotenvy = "0.15"
futures = "0.3"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
