[package]
name = "ark-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark = { path = "../ark" }
ark-db = { path = "../ark-db" }
ark-repo = { path = "../ark-repo"}
ark-web3 = { path = "../ark-web3" }
ark-web-common = { path = "../ark-web-common" }
axum = "0.7"
crypto-compare = { path = "../libs/crypto-compare"}
coinflip-web = { path = "../coinflip-web" }
chaindexing = { version = "0.1.49", path = "../chaindexing" }
http = "1"
dotenvy = "0.15"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["buffer", "limit"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
