[package]
name = "ark-web3"
version = "0.1.1"
edition = "2021"
description = "Global web3 concerns"

[dependencies]
async-trait = "0.1"
ark-db = { path = "../ark-db" }
ark-utils = { path = "../libs/ark-utils"}
bb8 = "0.8"
chrono = "0.4"
chaindexing = { version = "0.1.47" }
diesel = { version = "2", features = ["postgres", "uuid", "sqlite", "chrono", "r2d2", "serde_json"] }
diesel-async = { version = "0.4", features = ["bb8", "postgres", "deadpool"] }
dotenvy = "0.15"
ethers = "2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
strum = "0.26"
strum_macros = "0.26"
