[package]
name = "coinflip-repo"
version = "0.0.1"
edition = "2021"
description = "DB ORM related logic Coinflip"

[dependencies]
ark = { path = "../ark" }
ark-db = { path = "../ark-db" }
ark-web3 = { path = "../ark-web3" }
chrono = "0.4"
coinflip = { path = "../coinflip" }
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
serde = { version = "1", features = ["derive"] }