[package]
name = "coinflip-web"
version = "0.0.1"
edition = "2021"
description = "Coinflip web interface"

[dependencies]
async-trait = "0.1"
axum = "0.6"
ark-db = { path = "../ark-db" }
ark-web-app = { path = "../ark-web-app" }
coinflip = { path = "../coinflip" }
coinflip-repo = { path = "../coinflip-repo" }
chaindexing = "0.1.14"
crypto-compare = { path = "../libs/crypto-compare"}
http = "0.2"
dotenvy = "0.15"
futures = "0.3"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }