[package]
name = "coinflip-web"
version = "0.0.1"
edition = "2021"
description = "Coinflip web interface"

[dependencies]
async-trait = "0.1"
axum = "0.7"
ark = { path = "../ark" }
ark-contracts = { path = "../ark-contracts" }
ark-db = { path = "../ark-db" }
ark-repo = { path = "../ark-repo" }
ark-web3 = { path = "../ark-web3" }
ark-web-common = { path = "../ark-web-common" }
ark-utils = { path = "../libs/ark-utils" }
coinflip = { path = "../coinflip" }
coinflip-contracts = { path = "../coinflip-contracts" }
coinflip-repo = { path = "../coinflip-repo" }
chaindexing = { version = "0.1.29" }
crypto-compare = { path = "../libs/crypto-compare"}
http = "1"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["abigen", "rustls", "ws", "ethers-solc"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }