[package]
name = "coinflip"
version = "0.1.1"
edition = "2021"
description = "Coinflip data"

[dependencies]
async-trait = "0.1"
ark-db = { path = "../ark-db" }
bb8 = "0.8"
chaindexing = "0.1.13"
diesel = { version = "2", features = ["postgres", "uuid", "sqlite", "chrono", "r2d2", "serde_json"] }
diesel-async = { version = "0.4", features = ["bb8", "postgres", "deadpool"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
